--- a/src/css/cafe.css
+++ b/src/css/cafe.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Skranji:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gowun+Batang&family=Gowun+Dodum&display=swap');
 	
 	body{
 		margin: 0px;
@@ -18,6 +19,35 @@
 /* 		border: 1px solid black; */
 	}
 	
+	.cafe-name{
+		font-size:35pt;
+		font-family: 'Bagel Fat One', cursive;
+		filter: opacity(0.5) drop-shadow(0 0 0 brown);
+/* 		border: 1px solid black; */
+		display:inline-block;
+		position: relative;
+		top: -15px;
+	}
+	
+	.member{
+		display: inline-block;
+		position: absolute;
+		right: 8px;
+		top: 3px;
+	}
+	
+	.member > span > a{
+		margin: 2.5px;
+		font-family: 'Gowun Dodum', sans-serif;
+		font-size: 0.9em;
+		text-decoration: none;
+		color: black;
+	}
+	
+	.member > span > a:hover{
+		color: white;
+	}
+		
 	.poster{
 		margin-top: -3px;
 		width: 100%;
@@ -31,16 +61,5 @@
   		display: block;
 	}
 	
-	.cafe-name{
-		font-size:35pt;
-		font-family: 'Bagel Fat One', cursive;
-		filter: opacity(0.5) drop-shadow(0 0 0 brown);
-/* 		border: 1px solid black; */
-		display:inline-block;
-		position: relative;
-		top: -15px;
-	}
 
-	nav{
 
-	}
